# qt-filecopier

FileCopierCmd/: CMakeLists.txt  CopierBenchmarks.h  filecopier.cpp  filecopier.h  main.cpp
